<?xml version="1.0" encoding="utf-8"?>

<!--
SPDX-FileCopyrightText: 2023 Albert Vaca Cintora <albertvaka@gmail.com>

SPDX-License-Identifier: GPL-2.0-only OR GPL-3.0-only OR LicenseRef-KDE-Accepted-GPL
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:keep="@xml/shareplugin_preferences">

    <PreferenceCategory
        android:key="category_sending"
        android:title="@string/share_sending_category">

        <SwitchPreference
            android:id="@+id/share_send_folder_enabled"
            android:defaultValue="true"
            android:key="share_send_folder_enabled"
            android:summary="@string/share_send_folder_summary"
            android:title="@string/share_send_folder_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_receiving"
        android:title="@string/share_receiving_category">

        <SwitchPreference
            android:id="@+id/share_destination_customize"
            android:defaultValue="false"
            android:key="share_destination_custom"
            android:summaryOff="@string/share_destination_customize_summary_disabled"
            android:summaryOn="@string/share_destination_customize_summary_enabled"
            android:title="@string/share_destination_customize" />

        <Preference
            android:id="@+id/share_destination_folder_preference"
            android:key="share_destination_folder_preference"
            android:title="@string/share_destination_folder_preference" />

        <SwitchPreference
            android:id="@+id/share_notification_preference"
            android:defaultValue="true"
            android:key="share_notification_preference"
            android:summary="@string/share_notification_preference_summary"
            android:title="@string/share_notification_preference" />

    </PreferenceCategory>

</PreferenceScreen>
